--- a/css/main.css
+++ b/css/main.css
@@ -1510,12 +1510,14 @@ hr {
 
 .popup {
   display: none;
+  justify-content: center;
+  align-items: center;
   position: fixed;
   left: 0;
   top: 0;
   width: 100%;
   height: 100%;
-  overflow: auto;
+  overflow: hidden;
   background-color: rgba(0, 0, 0, 0.5);
   z-index: 10;
 }
@@ -1530,7 +1532,7 @@ hr {
   width: 80%;
   max-width: 800px;
   height: max-content;
-  z-index: 10;
+  /* z-index: 10; */
 }
 
 .close-btn {
